fixed spacing and layout issues

--- a/css/faqs.css
+++ b/css/faqs.css
@@ -22,6 +22,7 @@
   text-align: left;
   transition: max-height 0.2s ease-out;
   vertical-align: middle;
+  padding: 0em 1em;
 
 }
 
